# danibcorr-space

./: LICENSE  Makefile  README.md  README_EN.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  sidebars.js  tsconfig.json
.github/workflows/: deploy-to-github-pages.yml  deploy.yml  test-deploy.yml
README/: README_EN.md
blog/: authors.yml  deep-multi-task-meta-learning.md  tags.yml
blog/meta-learning/: deep-multi-task-meta-learning.md
docs/: intro.md
docs/herramientas/: _category_.json  anaconda.md  git.md  makefile.md
docs/herramientas/git/: _category_.json  git.md  github.md
docs/inteligencia-artificial/deep-learning/: fundamentos.md
docs/inteligencia-artificial/machine-learning/: fundamentos.md
docs/machine-learning-wiki/: intro.md
docs/machine-learning-wiki/bases-de-datos/: _category_.json
docs/machine-learning-wiki/herramientas/: _category_.json  anaconda.md  entornos_python.md  git.md  makefile.md
docs/machine-learning-wiki/inteligencia-artificial/: _category_.json
docs/machine-learning-wiki/procesos-metodologias/: _category_.json  devops.md  mlops.md
docs/machine-learning-wiki/programacion/: _category_.json  bash.md  python.md
docs/otros/: intro.md
docs/procesos-metodologias/: _category_.json  devops.md  mlops.md
docs/programacion/: _category_.json  bash.md  python.md
docs/programacion/cuda/: cuda.md  (+2 more)
docs/sistemas-operativos/: _category_.json  linux.md
i18n/en/: code.json
i18n/es/: code.json
scripts/: translator.py  translator_2.py
src/css/: custom.css
src/pages/: index.module.css  index.tsx
(+90 files in other folders)
